# lab-flask-tdd

./: .coveragerc  .gitignore  .travis.yml  Dockerfile  Jenkinsfile  Makefile  Pipfile  Procfile  README.md  Vagrantfile  config.py  gunicorn.conf.py  manifest.yml  models.py  pyproject.toml  requirements.txt  run.py  server.py  setup.cfg  sonar-project.properties  test_pets.py  test_server.py  wsgi.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml  workflow.yml
app/: __init__.py  models.py  service.py
db/: .keep
lab/: README.md  requirements.txt  setup.cfg  status.py  test_counter.py
playground/: test_app.py
service/: __init__.py  config.py  error_handlers.py  models.py  routes.py  service.py
service/common/: cli_commands.py  error_handlers.py  log_handlers.py  status.py
spec/: test_server_spec.py
static/: index.html
tests/: __init__.py  factories.py  pet_factory.py  pet_name_provider.py  test_cli.py  test_cli_commands.py  test_models.py  test_pets.py  test_routes.py  test_server.py  test_service.py
